--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # OCaml
-
 *.out
 *.annot
 *.cmo
@@ -10,11 +9,11 @@
 *.cmx
 *.cmxs
 *.cmxa
-
 implementation.ml
 
 
 # LaTeX
-
 *.aux
 *.log
+*.swo
+*.swp
