Programme pour la création de serveur en attente de doco

--- a/Server/makefile
+++ b/Server/makefile
@@ -1,8 +1,8 @@
 all:
-	ocamlc unix.cma server.ml
+	ocamlc -o network unix.cma network.ml
 
 clean:
-	rm -f *.cmi *.cmo *.out
+	rm -f *~ *.cmi *.cmo network
 
 edit:
-	gedit makefile server.ml &
+	gedit makefile network.ml &
